# read-sas

./: .gitignore  .mypy.ini  .ruff.toml  README.md  pyproject.toml  pytest.test  read_sas-0.1.0-py3-none-any.whl  tinycopy.sas7bdat:Zone.Identifier
.github/workflows/: ruff_lint.yml
mypy-report/: index.html
mypy-report/html/src/read_sas/: __init__.py.html  _read_sas.py.html
mypy-report/html/src/read_sas/src/: __calculate_chunk_size.py.html  __format_filepath.py.html  __init__.py.html  __read_file.py.html  _config.py.html  _get_sas_table_iterator.py.html  _logger.py.html  _n_gb_in_file.py.html  _n_rows_in_sas7bdat.py.html  _profiler.py.html  _sas_reader.py.html  _timer.py.html  _was_file_created_in_last_week.py.html
mypy-report/html/src/read_sas/tests/: test__calculate_chunk_size.py.html  test__format_filepath.py.html  test__read_file.py.html  test_config.py.html  test_logger.py.html  test_n_gb_in_file.py.html  test_n_rows_in_sas7bdat.py.html  test_readsas_class.py.html  test_sas_reader.py.html  test_timer.py.html  test_was_file_created_in_last_week.py.html
src/read_sas/: __init__.py  _read_sas.py  main.py  read_sas.py
src/read_sas/src/: __calculate_chunk_size.py  __format_filepath.py  __init__.py  __read_file.py  _calculate_chunk_size.py  _config.py  _format_filepath.py  _get_sas_table_iterator.py  _logger.py  _n_gb_in_file.py  _n_rows_in_sas7bdat.py  _sas_reader.py  _timer.py  _was_file_created_in_last_week.py  config.py  get_sas_table_iterator.py  logger.py  n_gb_in_file.py  n_rows_in_sas7bdat.py  profiler.py  sas_reader.py
src/read_sas/tests/: test__calculate_chunk_size.py  test__format_filepath.py  test__read_file.py  test_config.py  test_logger.py  test_n_gb_in_file.py  test_n_rows_in_sas7bdat.py  test_readsas_class.py  test_sas_reader.py  test_timer.py  test_was_file_created_in_last_week.py
