[project]
name = "read-sas"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Andy Weaver", email = "andrewayersweaver@gmail.com" }]
dependencies = ["pandas>=2.0", "polars>=1.5", "pyreadstat>=1.2.7"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/read_sas"]
